# neural_network_cpp_module

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Handwriting Recognizer/Handwriting Recognizer/: AppDelegate.m  ViewController.h  ViewController.mm  main.m  mindData  mindData-learn
Handwriting Recognizer/Handwriting Recognizer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Handwriting Recognizer/Handwriting Recognizer.xcodeproj/xcuserdata/Neil.xcuserdatad/xcschemes/: xcschememanagement.plist
Handwriting Recognizer/Handwriting Recognizer.xcodeproj/xcuserdata/neilnie.xcuserdatad/xcschemes/: xcschememanagement.plist
Handwriting Recognizer/Handwriting Recognizer/Base.lproj/: Main.storyboard
Handwriting Recognizer/Handwriting Recognizer/Handwriting/: AppDelegate.h  AppDelegate.m  Info.plist  Mind.h  MindStorage.h  MindStorage.m  NeuralMath.h  NeuralMath.m
Handwriting Recognizer/Handwriting Recognizer/libNeuralNets/data/model/: dense_1_bias.txt  dense_1_weights.txt  dense_2_bias.txt  dense_2_weights.txt  dense_3_weights.txt  trained_v1.h5
Handwriting Recognizer/Handwriting Recognizer/libNeuralNets/src/layers/: Dense.cpp
data/test_images/: 3.txt  4.txt  9.txt
example/Handwriting Recognizer/: AppDelegate.h
example/Handwriting Recognizer.xcodeproj/: project.pbxproj
example/Handwriting Recognizer.xcodeproj/project.xcworkspace/xcuserdata/neilnie.xcuserdatad/: UserInterfaceState.xcuserstate
example/Handwriting Recognizer.xcodeproj/xcuserdata/Neil.xcuserdatad/xcschemes/: Handwriting Recognizer.xcscheme
example/Handwriting Recognizer.xcodeproj/xcuserdata/neilnie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
example/Handwriting Recognizer/Base.lproj/: LaunchScreen.storyboard
example/Handwriting Recognizer/Handwriting/: Mind.m  ViewController.h  ViewController.m  main.m
example/Handwriting Recognizer/Handwriting/Base.lproj/: Main.storyboard
example/Handwriting Recognizer/libNeuralNets/data/model/: dense_3_bias.txt
example/Handwriting Recognizer/libNeuralNets/include/libNeuralNets/layers/: Sigmoid.h
example/Handwriting Recognizer/libNeuralNets/include/libNeuralNets/module/: Module.h
example/Handwriting Recognizer/libNeuralNets/src/: LibNeuralNets.h
example/Handwriting Recognizer/libNeuralNets/src/layers/: Sigmoid.cpp
example/Handwriting Recognizer/libNeuralNets/src/module/: Module.cpp
include/libNeuralNets/: trained_v1.h5
include/libNeuralNets/layers/: Conv2d.h  Dense.h  Layer.h  ReLU.h  Sigmoid.h
include/libNeuralNets/module/: Module.h
other/: model.h5  mymodel.py
src/: CMakeLists.txt  LibNeuralNets.cpp
src/layers/: Conv2d.cpp  Dense.cpp  Layer.cpp  ReLU.cpp  Sigmoid.cpp
src/module/: Module.cpp
string_sort/: a.out  string_sort.cpp
sum/: a.out  sum.cpp
tests/: test_libNeuralNets.cpp
vector_vs_list/: a.out  vector_vs_list.cpp
